<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:backgroundTint="#32FB5151"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/kavoon"
            android:gravity="center"
            android:text="Login"
            android:textSize="34sp" />
        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_emailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_enhanced_encryption_24"
            app:startIconTint="#FF9800"
            app:startIconTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passwordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="remember me"
                android:buttonTint="@color/black"
                android:textColor="@color/black"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="#9C5C5C"
            android:padding="12dp"
            android:text="Login"
            app:backgroundTint="#000000" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="No account yet? Create one"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>