...
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:passwordToggleTint="#00FFFFFF"
            app:startIconDrawable="@drawable/book_hotel"
            app:startIconTint="#FF9800">
            <AutoCompleteTextView
                android:id="@+id/edRoom"
                android:hint="Room"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

...
